--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "class-validator",
+  "name": "cv-pksilen",
   "version": "0.13.1",
   "description": "Decorator-based property validation for classes.",
   "author": "TypeStack contributors",
   "license": "MIT",
   "sideEffects": false,
-  "main": "./cjs/index.js",
+  "main": "./build/cjs/index.js",
+  "files": ["build"],
   "module": "./esm5/index.js",
   "es2015": "./esm2015/index.js",
   "typings": "./types/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/typestack/class-validator.git"
+    "url": "https://github.com/pksilen/cv-pksilen.git"
   },
   "tags": [
     "validator",
