--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "cv-pksilen",
-  "version": "0.13.1",
+  "version": "0.13.2",
   "description": "Decorator-based property validation for classes.",
   "author": "TypeStack contributors",
   "license": "MIT",
   "sideEffects": false,
   "main": "./build/cjs/index.js",
-  "files": ["build"],
+  "files": [
+    "build"
+  ],
   "module": "./esm5/index.js",
   "es2015": "./esm2015/index.js",
   "typings": "./types/index.d.ts",
