--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "module": "./esm5/index.js",
   "es2015": "./esm2015/index.js",
-  "typings": "./types/index.d.ts",
+  "typings": "./build/types/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/pksilen/cv-pksilen.git"
